--- a/src/contents/news/geographies-of-aging-symposium-fsu.mdx
+++ b/src/contents/news/geographies-of-aging-symposium-fsu.mdx
@@ -1,17 +1,17 @@
 ---
-title: 'Geographies of Aging and the Life Course Symposium launches at FSU'
+title: '2026 Geographies of Aging and the Life Course (GOAL) Symposium at FSU'
 date: '2025-07-01'
 author: 'Amber DeJohn'
 description: 'Amber DeJohn co-founds a new symposium to spotlight aging research across FSU, backed by COSSPP internal funding.'
-thumbnail: '/img/news-demo/default-news-thumbnail.jpg'
+thumbnail: '/img/news-demo/goal.jpg'
 ---
 
-# Geographies of Aging and the Life Course Symposium launches at FSU
+# 2026 Geographies of Aging and the Life Course (GOAL) Symposium at FSU
 
-The Spatial Data Science Center is helping to launch the first **Geographies of Aging and the Life Course Symposium** at Florida State University—an initiative that brings together scholars focused on aging, mobility, and community well-being.
+SDSC faculty Dr.DeJohn is helping to launch the first **Geographies of Aging and the Life Course Symposium** at Florida State University—an initiative that brings together scholars focused on aging, mobility, and community well-being. 
 
-- Amber DeJohn is a co-founder of the symposium series.
-- The launch is funded through an internal grant from FSU's College of Social Sciences & Public Policy (COSSPP).
-- Programming will highlight spatial, technological, and policy perspectives on healthy aging.
+The 2026 GOAL Symposium, hosted by Florida State University, marks the first independent meeting of GOAL researchers. This 2-day workshop will build capacity for geographies of aging and the life course through keynote speakers, methodological workshops, and opportunities to share work in progress.
 
-Finalized program details and registration information will be shared as soon as they are available. If you would like to receive updates or get involved, reach out to Amber directly.
+Mark your calendars for February 26-27th, 2026 in Tallahassee, Florida!
+
+See more details related to 2026 GOAL Symposium at: [https://goalgeo.wordpress.com/events/](https://goalgeo.wordpress.com/events/)
