--- a/src/contents/news/health-and-place-special-issue.mdx
+++ b/src/contents/news/health-and-place-special-issue.mdx
@@ -1,17 +1,15 @@
 ---
-title: 'Co-guest editing: Health & Place special issue on aging in context'
-date: '2025-09-10'
+title: 'Call for Paper:  Health & Place special issue on "Aging in Place and Space"'
+date: '2025-04-06'
 author: 'Amber DeJohn'
-description: 'Amber DeJohn joins the editorial team shaping a Health & Place special issue on context-driven aging and cognition.'
-thumbnail: '/img/news-demo/default-news-thumbnail.jpg'
+description: 'Call for Paper: Amber DeJohn co-edits a special issue in Health & Place on Aging'
+thumbnail: '/img/news-demo/health-place.jpg'
 ---
 
 # Health & Place special issue focuses on aging in place and space
 
-Amber DeJohn is serving as a co-guest editor for the Health & Place special issue, **"Aging in Place and Space: Contextual Influences on Health and Cognition."** The collection invites submissions that interrogate geographies of aging, social connection, technology adoption, and built-environment supports for older adults.
+SDSC Faculty Amber DeJohn is serving as a co-guest editor for the Health & Place special issue, **"Aging in Place and Space: Contextual Influences on Health and Cognition."** 
 
-- Explore the call for papers: [Health & Place special issue](https://www.sciencedirect.com/special-issue/321139/aging-in-place-and-space-contextual-influences-on-health-and-cognition)
-- Interdisciplinary contributions are welcome from geography, public health, gerontology, planning, and allied fields.
-- Accepted papers will amplify place-based insights that inform healthier, more inclusive communities for people aging in place.
+This special issue aims to advance understanding of how contextual factors in the physical spaces and social places where we live influence aging and cognition across diverse populations and settings.
 
-Researchers interested in contributing are encouraged to review the submission timeline and reach out with proposal ideas.
+Explore the full call for papers at [Health & Place](https://www.sciencedirect.com/special-issue/321139/aging-in-place-and-space-contextual-influences-on-health-and-cognition)
