chore: lint and format

--- a/src/contents/news/fsu-launches-spatial-data-science-center.mdx
+++ b/src/contents/news/fsu-launches-spatial-data-science-center.mdx
@@ -19,7 +19,7 @@ Florida State University has formally launched the **Spatial Data Science Center
 The SDSC is already leading several large-scale initiatives:
 
 - **Election analytics:** processing voting behavior for more than 200,000 U.S. precincts across the 2020 and 2024 elections to better understand local dynamics.
-- **Explainable GeoAI:** developing transparent machine learning models that show *why* spatial predictions are made, improving trust and adoption.
+- **Explainable GeoAI:** developing transparent machine learning models that show _why_ spatial predictions are made, improving trust and adoption.
 - **MGWR innovation:** optimizing the multiscale geographically weighted regression framework so it can run efficiently on standard laptops while working with massive datasets.
 
 ## Collaboration across campus and beyond
@@ -28,4 +28,4 @@ The center is intentionally collaborative—engaging faculty and students from h
 
 SDSC welcomes partnerships with FSU units, government agencies, nonprofits, and industry. Faculty and practitioners interested in collaborating can reach out via [cosspp.fsu.edu/sdsc](https://cosspp.fsu.edu/sdsc/) or contact Director Stewart Fotheringham at [stewart.fotheringham@fsu.edu](mailto:stewart.fotheringham@fsu.edu).
 
-*Story adapted from reporting by Rebecca Sage and Rachel Lechwar for FSU News.*
+_Story adapted from reporting by Rebecca Sage and Rachel Lechwar for FSU News._
