chore: add yang's profile

--- a/src/contents/members/cynthia-fan-yang/biography.mdx
+++ b/src/contents/members/cynthia-fan-yang/biography.mdx
@@ -1,5 +1,1 @@
-Cynthia Fan Yang, Ph.D., is an associate professor and Bernard Sliger Scholar in Florida State University's Department of Economics. Based in Bellamy 276, she mentors students and collaborators while advancing quantitative approaches that inform evidence-based economic policy.
-
-Yang's research centers on econometrics and applied econometrics, developing rigorous tools to unpack how markets and public programs perform in practice. She earned her doctorate in economics from the University of Southern California in 2018, and partners across disciplines to translate statistical insights into actionable recommendations for decision makers.
-
-She welcomes inquiries from colleagues, students, and community partners at [cynthia.yang@fsu.edu](mailto:cynthia.yang@fsu.edu) and shares updates on her work at [https://sites.google.com/site/cynthiafanyang/](https://sites.google.com/site/cynthiafanyang/).
+Cynthia Fan Yang, Ph.D., earned her doctorate in Economics from the University of Southern California in 2018.
